tests/sksl/errors/InvalidMeshFragmentMainParameters.stage
### Compilation failed:

error: 5: 'main' parameters must be (const Varyings, (out (half4|float4))?)
float2 main(const Varyings vary, float4 outColor) {
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
error: 6: unknown identifier 'vary'
    return vary.position;
           ^^^^
2 errors
